--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -118,7 +118,7 @@
                 app:cardElevation="0dp"
                 app:cardCornerRadius="10dp"
                 android:layout_margin="5dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 >
 
                 <LinearLayout
@@ -243,8 +243,6 @@
 
                     </LinearLayout>
 
-
-
                 </LinearLayout>
 
 
@@ -319,8 +317,11 @@
                             android:id="@+id/dataPlotBC"
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
-                            android:layout_margin="5dp"
-                            android:clickable="false"/>
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:clickable="false" />
 
                     </RelativeLayout>
 
