--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Task To-do List"
+                android:text="@string/app_name"
                 android:textStyle="bold"
                 android:textSize="30dp"
                 android:textColor="@color/colorBlack"
